# nonebot-plugin-orangejuice

./: LICENSE  README.md  pyproject.toml
nonebot_piugin_orangejuice/: Le.py  __init__.py
nonebot_plugin_orangejuice/: Card.py  Config.py  Deck.py  Emote.py  Ess.py  Le.py  Mixer.py  Stats.py  __init__.py
nonebot_plugin_orangejuice/resources/card/: namelist.json  oj_data-2025-07-14.db  regex.json
