[tool.poetry]
authors = ["Polaris_Light <995905922@qq.com>"]
description = "Sorabot Implemention"
homepage = "https://github.com/FDCraft/nonebot-plugin-orangejuice"
license = "MIT"
name = "nonebot-plugin-orangejuice"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
nonebot-adapter-onebot = ">=2.0.0-beta.1"
nonebot2 = ">=2.0.0"
python = "^3.8"
pymysql = ">=1.0.0"
