[project]
name = "nonebot-plugin-orangejuice"
version = "0.4.0"
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0-beta.1",
    "aiomysql>=0.2.0"
]
requires-python = ">=3.8"
authors = [{ name = "Polaris_Light", email = "995905922@qq.com" }]
description = "Sorabot Implemention"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["orangejuice"]
classifiers = []

[project.urls]
Homepage = "https://github.com/FDCraft/nonebot-plugin-orangejuice"

[tool.poetry.dependencies]
nonebot-adapter-onebot = ">=2.0.0-beta.1"
nonebot2 = ">=2.0.0"
python = "^3.8"
aiomysql = ">=0.2.0"
